fixing project dropdown z-index bug

--- a/css/board.scss
+++ b/css/board.scss
@@ -359,6 +359,10 @@ body.view-compact {
 			padding-left: $margin/2;
 			position: relative;
 
+			&.active {
+				z-index: 10;
+			}
+
 			.panel-body {
 				padding: $margin/3 $margin/2;
 			}
